--- a/Views/MedicalCars/Index.cshtml
+++ b/Views/MedicalCars/Index.cshtml
@@ -43,7 +43,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.User.Id)
+                    @Html.DisplayFor(modelItem => item.User.FullName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.DateMedicalCar)
@@ -64,7 +64,7 @@
                 @Html.DisplayFor(modelItem => item.IssueExit)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Doctor.IdDoctor)
+                    @Html.DisplayFor(modelItem => item.Doctor.FullNameDoctor)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.IdMedicalCar">Edit</a> |
