--- a/Views/DisabilitySheets/Delete.cshtml
+++ b/Views/DisabilitySheets/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model PatientCard.Models.InspectionHospital
+﻿@model PatientCard.Models.DisabilitySheet
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>InspectionHospital</h4>
+    <h4>DisabilitySheet</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -18,45 +18,51 @@
             @Html.DisplayFor(model => model.User.Id)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Departament)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Departament.IdDepartament)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Doctor)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Doctor.IdDoctor)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Service)
+            @Html.DisplayNameFor(model => model.FromDate)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Service.IdService)
+            @Html.DisplayFor(model => model.FromDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.InspectionPlan)
+            @Html.DisplayNameFor(model => model.ToDate)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.InspectionPlan)
+            @Html.DisplayFor(model => model.ToDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Complaint)
+            @Html.DisplayNameFor(model => model.Departament)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Complaint)
+            @Html.DisplayFor(model => model.Departament.IdDepartament)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Inspection)
+            @Html.DisplayNameFor(model => model.Organization)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Inspection)
+            @Html.DisplayFor(model => model.Organization.IdOrganization)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.DateOfSinging)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.DateOfSinging)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Reason)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Reason)
         </dd>
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="IdInspectionHospital" />
+        <input type="hidden" asp-for="IdDisabilitySheet" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
