--- a/Views/DisabilitySheets/Details.cshtml
+++ b/Views/DisabilitySheets/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model PatientCard.Models.InspectionPolyclinic
+﻿@model PatientCard.Models.DisabilitySheet
 
 @{
     ViewData["Title"] = "Details";
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>InspectionPolyclinic</h4>
+    <h4>DisabilitySheet</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -17,50 +17,50 @@
             @Html.DisplayFor(model => model.User.Id)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Departament)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Departament.IdDepartament)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Doctor)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Doctor.IdDoctor)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Service)
+            @Html.DisplayNameFor(model => model.FromDate)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Service.IdService)
+            @Html.DisplayFor(model => model.FromDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Complaints)
+            @Html.DisplayNameFor(model => model.ToDate)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Complaints)
+            @Html.DisplayFor(model => model.ToDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AnamnesisDisease)
+            @Html.DisplayNameFor(model => model.Departament)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AnamnesisDisease)
+            @Html.DisplayFor(model => model.Departament.IdDepartament)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Diagnosis)
+            @Html.DisplayNameFor(model => model.Organization)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Diagnosis)
+            @Html.DisplayFor(model => model.Organization.IdOrganization)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Recommendation)
+            @Html.DisplayNameFor(model => model.DateOfSinging)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Recommendation)
+            @Html.DisplayFor(model => model.DateOfSinging)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Reason)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Reason)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.IdInspectionPoliclinic">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model?.IdDisabilitySheet">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
